# passport-liana-signer

./: .gitignore  Cargo.toml  README.md  SDK-SETUP.md  SIGNET-TEST.md  app-config.toml  build.rs  manifest.toml  permission_templates.toml
.cargo/: config.toml
fixtures/: liana-test-fixtures.md
i18n/: en.json
src/: main.rs  master_key.rs
src/liana/: descriptor.rs  mod.rs  policy.rs  psbt.rs  signing.rs  store.rs
ui/: app.slint  callbacks.slint  liana-slide-to-button.slint  liana-theme.slint  liana-widgets.slint  ui
ui/compat/: pages.slint  theme.slint  tr.slint  widgets.slint
ui/pages/advanced/: page.slint  props.slint
ui/pages/archive/: page.slint  props.slint
ui/pages/delete-confirm/: page.slint  props.slint
ui/pages/descriptor-qr/: page.slint  props.slint
ui/pages/export-done/: page.slint  props.slint
ui/pages/home/: page.slint  props.slint
ui/pages/import-done/: page.slint  props.slint
ui/pages/import-paths/: page.slint  props.slint
ui/pages/import-review/: page.slint  props.slint
ui/pages/policy/: page.slint  props.slint
ui/pages/rename/: page.slint  props.slint
ui/pages/review/: page.slint  props.slint
ui/pages/verify/: page.slint  props.slint
ui/pages/xpub/: page.slint  props.slint
ui/pages/xpub-save/: page.slint  props.slint
