# SPDX-FileCopyrightText: 2026 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "gui-app-liana-signer"
version = "0.1.0"
edition = "2021"
authors = ["Foundation Devices, Inc. <hello@foundation.xyz>"]
license = "GPL-3.0-or-later"

[features]
# Host-only deterministic app seed for simulator development. Keep disabled for
# release builds so host binaries cannot silently derive a known signing key.
dev-seed = []
# Host-only helper for same-Mac simulator/Liana file exchange. Keep disabled for
# release builds so the app cannot silently read/write bridge files.
sim-bridge = []

[dependencies]
# KeyOS plumbing
log = "0.4"
log-server = { package = "xous-api-log", git = "ssh://git@github.com/Foundation-Devices/KeyOS-Dev.git", rev = "c26c80a1b77553cebad0bd71cd4c4af0289b4a1c" }
ngwallet = { git = "https://github.com/Foundation-Devices/ngwallet.git", tag = "3.6.0", features = [
    "rkyv",
    "sha2",
] }
security = { git = "ssh://git@github.com/Foundation-Devices/KeyOS-Dev.git", rev = "c26c80a1b77553cebad0bd71cd4c4af0289b4a1c" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
server = { git = "ssh://git@github.com/Foundation-Devices/KeyOS-Dev.git", rev = "c26c80a1b77553cebad0bd71cd4c4af0289b4a1c" }
slint-keyos-platform = { git = "ssh://git@github.com/Foundation-Devices/KeyOS-Dev.git", rev = "c26c80a1b77553cebad0bd71cd4c4af0289b4a1c" }

# Cross-target utilities
anyhow = "1"
base64 = "0.22"
getrandom = "=0.2.10"
hex = "0.4"
# Keep this aligned with KeyOS' lockfile. simd-adler32 0.3.9 uses ARM NEON
# intrinsics that are unstable with the current armv7a-unknown-xous-elf toolchain.
simd-adler32 = "=0.3.7"

# Descriptor/policy/PSBT/signing logic lives in src/liana/, built on ngwallet's
# bitcoin + miniscript so it compiles for BOTH the host simulator and the
# armv7a-unknown-xous-elf device target. Mirrors the host-tested
# `liana-signer-core` reference crate.

[build-dependencies]
slint-keyos-platform-build = { git = "ssh://git@github.com/Foundation-Devices/KeyOS-Dev.git", rev = "c26c80a1b77553cebad0bd71cd4c4af0289b4a1c" }

[patch.crates-io]
foundation-ur = { git = "https://github.com/Foundation-Devices/foundation-rs.git", tag = "0.6.0" }
getrandom = { git = "ssh://git@github.com/Foundation-Devices/KeyOS-Dev.git", rev = "c26c80a1b77553cebad0bd71cd4c4af0289b4a1c" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(keyos)'] }
